--- a/src/main/pom.xml
+++ b/src/main/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>CDLibrary</groupId>
-    <artifactId>com.CD_Library</artifactId>
+    <artifactId>com.yahoo.seanhanway.CD_Library</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
